	- Use Lufi API (js lib	)
	- Password encryption is now done client side, through Lufi API
	- Update default CSP to allow `blob:`
	- Ability to use `Enter` key to validate password
	- Add focus on password input on download page
	- 🩹 — Fix warning in mounter app
	- 🩹 — Fix missing space in a template file
	- 👷 — Update CI image to trixie

0.07.2 2025-07-29
	- 🐛 — Fix bug in POST file deletion (#319)

0.07.1 2025-07-16
	- 🚚 — Use POST to delete a file instead of GET

0.07.0 2023-12-25
	- ⬆️ — Update jQuery
	- 🩹 — Fix a format query parameter
	- 🎨 — Use template literals in js
	- ➖ — Replace moment.js with Date().toLocaleDateString(…)
	- 🩹 — Fix Roboto font warnings in js console
	- ♿️ — Add autofocus on login input field
	- ✨ — Add a `lockfile_dir` setting (fix #242)
	- 👷 — Update the create-release snippet’s URL

0.06.00 2023-12-18
	- ⬆️ — Update deps
	- 🌐 Update translations

0.05.21 2023-02-21
	- ⬆️ — Update deps (still #284)

0.05.20 2023-02-21
	- ⬆️ — Update deps (#284)

0.05.19 2023-01-11
	- 🌐 Update translations
	- 👷 — Deactivate Swift tests in CI
	- Terraform and Ansible provisioning (@arunodhayamsam)
	- Support for header authentication (@mildis)

0.05.18 2022-03-19
	- ✨ Add support for header authentication, thanks to @mildis (!69)
	- 🌐 Update translations

0.05.17 2022-03-02
	- 🌐 Update translations

0.05.16 2021-11-08
	- 👷🐛 Create release in CI before publishing changelog
	- 🌐 Update translations

0.05.15 2021-11-03
	- 🐛 Fix mail signature separator
	- 💄 Disable signature when using LDAP (#249)
	- 🌐 Update translations
	- 🔒 Fix XSS where using zip feature (#254)
	- 🔒 Fix unauthorized manipulations of invitations (#254)
	- 🔒 Detect schemeless URL in mail (#254)

0.05.14 2021-06-16
	- 🔧 Set default morbo port to 3000 (as it should have stay)
	- 🐛 Fix `Notification not defined` in Duckduckgo browser (Fix #224 again)
	- ✨ Add `disable_mail_sending` config parameter
	- 🌐 Update translations

0.05.13 2021-01-28
	- 🐛 Fix latest git tag improperly fetched
