@@ -11,6 +11,7 @@ Revision history for Lufi
 	- 🩹 — Fix warning in mounter app
 	- 🩹 — Fix missing space in a template file
 	- 👷 — Update CI image to trixie
+	- 🔨 — Use temporary filename and directory to download Lufi API
 
 0.07.2 2025-07-29
 	- 🐛 — Fix bug in POST file deletion (#319)
